playing with heroku

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "~0.6.1",
-    
+
     "grunt-babel": "~5.0.0",
     "grunt-google-cdn": "~0.4.0",
     "grunt-jscs": "^2.1.0",
@@ -85,7 +85,7 @@
     "node": ">=0.12.0"
   },
   "scripts": {
-    "start": "node server",
+    "start": "./node_modules/.bin/babel-core main.es6",
     "test": "grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
