playing with heroku

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^4.1.2",
     "bluebird": "^2.9.34",
     "connect-mongo": "^0.8.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "babel-core": "^5.6.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.0",
@@ -85,7 +86,7 @@
     "node": ">=0.12.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/babel-core main.es6",
+    "start": "node server",
     "test": "grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
