--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.9.0",
     "babel-runtime": "^5.8.20",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
@@ -16,6 +14,8 @@
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "grunt": "0.4.5",
+    "grunt-cli": "1.2.0",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
@@ -86,7 +86,7 @@
     "node": ">=0.12.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/babel-node server",
+    "start": "grunt serve",
     "test": "grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
