--- a/package.json
+++ b/package.json
@@ -14,8 +14,33 @@
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
-    "grunt": "0.4.5",
-    "grunt-cli": "1.2.0",
+    "grunt": "~0.4.5",
+    "grunt-wiredep": "^2.0.0",
+    "grunt-concurrent": "^2.0.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "~0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-babel": "~5.0.0",
+    "grunt-google-cdn": "~0.4.0",
+    "grunt-jscs": "^2.1.0",
+    "grunt-newer": "^1.1.1",
+    "grunt-filerev": "^2.3.1",
+    "grunt-usemin": "^3.0.0",
+    "grunt-env": "~0.4.1",
+    "grunt-node-inspector": "^0.4.1",
+    "grunt-nodemon": "^0.4.0",
+    "grunt-dom-munger": "^3.4.0",
+    "grunt-protractor-runner": "^2.0.0",
+    "grunt-injector": "^0.6.0",
+    "grunt-karma": "~0.12.0",
+    "grunt-build-control": "^0.6.0",
+    "jit-grunt": "^0.9.1",
+    "time-grunt": "^1.2.1",
+    "grunt-express-server": "^0.5.1",
+    "grunt-open": "~0.2.3",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
