--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "autoprefixer": "^6.0.0",
+    "babel-core": "^5.6.4",
     "grunt": "~0.4.5",
     "grunt-wiredep": "^2.0.0",
     "grunt-concurrent": "^2.0.1",
@@ -41,6 +43,7 @@
     "time-grunt": "^1.2.1",
     "grunt-express-server": "^0.5.1",
     "grunt-open": "~0.2.3",
+    "open": "~0.0.4",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
