--- a/package.json
+++ b/package.json
@@ -3,52 +3,22 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "babel-runtime": "^5.8.20",
-    "bluebird": "^2.9.34",
-    "body-parser": "^1.13.3",
-    "composable-middleware": "^0.3.0",
-    "compression": "^1.5.2",
-    "connect-mongo": "^0.8.1",
-    "cookie-parser": "^1.3.5",
-    "ejs": "^2.3.3",
-    "errorhandler": "^1.4.2",
     "express": "^4.13.3",
+    "morgan": "~1.6.1",
+    "body-parser": "^1.13.3",
+    "method-override": "^2.3.5",
+    "cookie-parser": "^1.3.5",
     "express-session": "^1.11.3",
-    "autoprefixer": "^6.0.0",
-    "babel-core": "^5.6.4",
-    "grunt": "~0.4.5",
-    "grunt-wiredep": "^2.0.0",
-    "grunt-concurrent": "^2.0.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jshint": "~0.11.2",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-babel": "~5.0.0",
-    "grunt-google-cdn": "~0.4.0",
-    "grunt-jscs": "^2.1.0",
-    "grunt-newer": "^1.1.1",
-    "grunt-filerev": "^2.3.1",
-    "grunt-usemin": "^3.0.0",
-    "grunt-env": "~0.4.1",
-    "grunt-node-inspector": "^0.4.1",
-    "grunt-nodemon": "^0.4.0",
-    "grunt-dom-munger": "^3.4.0",
-    "grunt-protractor-runner": "^2.0.0",
-    "grunt-injector": "^0.6.0",
-    "grunt-karma": "~0.12.0",
-    "grunt-build-control": "^0.6.0",
-    "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.2.1",
-    "grunt-express-server": "^0.5.1",
-    "grunt-open": "~0.2.3",
-    "open": "~0.0.4",
+    "errorhandler": "^1.4.2",
+    "compression": "^1.5.2",
+    "composable-middleware": "^0.3.0",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
-    "method-override": "^2.3.5",
+    "babel-runtime": "^5.8.20",
+    "ejs": "^2.3.3",
     "mongoose": "^4.1.2",
-    "morgan": "~1.6.1",
+    "bluebird": "^2.9.34",
+    "connect-mongo": "^0.8.1",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
@@ -63,6 +33,7 @@
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "~0.6.1",
+
     "grunt-babel": "~5.0.0",
     "grunt-google-cdn": "~0.4.0",
     "grunt-jscs": "^2.1.0",
@@ -111,10 +82,10 @@
     "supertest": "^1.1.0"
   },
   "engines": {
-    "node": ">=6.2.0"
+    "node": ">=0.12.0"
   },
   "scripts": {
-    "start": "grunt serve",
+    "start": "node server",
     "test": "grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
