--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: node_js
 node_js:
   - '0.12'
-  - '4.0.0'
+  - '6.2.0'
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
 matrix:
   fast_finish: true
-  allow_failures:
-    - node_js: 4.0.0
 before_script:
   - npm install -g grunt-cli
 services: mongodb
