--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: node_js
 node_js:
   - '0.12'
-  - '6.2.0'
+  - '6'
+env:
+  - CXX=g++-4.8
 addons:
   apt:
     sources:
-    - ubuntu-toolchain-r-test
+      - ubuntu-toolchain-r-test
     packages:
-    - gcc-4.8
+      - g++-4.8
 matrix:
   fast_finish: true
 before_script:
